--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".InfosPlaceActivity" />
-        <activity android:name=".QRCodeActivity"></activity>
+        <activity android:name=".QRCodeActivity" />
+        <activity android:name=".AdminHomeActivity" />
+        <activity android:name=".AdminUsersActivity"></activity>
     </application>
 
 </manifest>
