--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".LanguageActivity"></activity>
+        <activity android:name=".LanguageActivity" />
+        <activity android:name=".AddPlaceActivity" />
+        <activity android:name=".EditPlaceActivity" />
     </application>
 
 </manifest>
