--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -20,23 +21,58 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CantonActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".TownActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".PlaceActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".LoginActivity" android:screenOrientation="portrait" />
-        <activity android:name=".SearchActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".RegisterActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".InfosPlaceActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".QRCodeActivity" android:screenOrientation="portrait" />
-        <activity android:name=".AdminHomeActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".AdminUsersActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".HomeActivity" android:screenOrientation="portrait" />
-        <activity android:name=".ProfileActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".SettingsActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".LanguageActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".AddPlaceActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".EditPlaceActivity" android:screenOrientation="portrait"  />
-        <activity android:name=".EditProfileActivity" android:screenOrientation="portrait"  />
+        <activity
+            android:name=".CantonActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TownActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PlaceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SearchActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".InfosPlaceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".QRCodeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AdminHomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AdminUsersActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LanguageActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddPlaceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".EditPlaceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".EditProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".AddTownActivity" />
     </application>
 
 </manifest>
