--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,15 @@
         <activity
             android:name=".EditProfileActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".AddTownActivity" />
+        <activity
+            android:name=".AddTownActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".EditTownActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AboutActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
